| Bug #54651 | Ndb allows invalid alter-table | ||
|---|---|---|---|
| Submitted: | 21 Jun 2010 7:15 | Modified: | 10 Jul 2010 6:51 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[21 Jun 2010 7:15]
Jonas Oreland
[21 Jun 2010 10:02]
Jonas Oreland
pushed to 6.3.35, 7.0.16 and 7.1.5
[23 Jun 2010 13:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/111920 3223 Jonas Oreland 2010-06-21 ndb - bug#54651 - check for duplicate table name in alter-table rename
[23 Jun 2010 13:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/111923 3223 Jonas Oreland 2010-06-21 ndb - bug#54651 - check for duplicate table name in alter-table rename
[10 Jul 2010 6:51]
Jon Stephens
Documented bugfix in the NDB-6.3.35, 7.0.16 and 7.1.5 changelogs, as follows:
When using the NDB API, it was possible to rename a table with
the same name as that of an existing table.
NOTE: This issue did not affect table renames executed using SQL
on MySQL servers acting as MySQL Cluster API nodes.
Closed.
