ndb - bug#54651 - check for duplicate table name in alter-table rename